<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/change_pass_old_txt"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:password="false"
                android:hint="@string/old_password"
                android:textAlignment="viewStart" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/chnge_pass_new_txt"
                android:layout_below="@+id/change_pass_old_txt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/new_password"
                android:textAlignment="viewStart"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/change_pass_save_btn"
                android:layout_below="@+id/chnge_pass_new_txt"
                android:background="@color/colorAccent"
                android:textColor="#fff"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>