<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".food.NewFoodSampleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearLayout2"
                android:layout_marginBottom="26dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/food"
                    android:id="@+id/food_sample_name"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_tried"
                    android:id="@+id/food_sample_date"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/baby_rate"
                    android:textColor="@color/colorTextPrimary"
                    android:id="@+id/textView10" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="69dp"
                        android:layout_height="69dp"
                        android:src="@drawable/yum"
                        android:id="@+id/imageView6" />

                    <ImageView
                        android:layout_width="69dp"
                        android:layout_height="69dp"
                        android:src="@drawable/normal"
                        android:id="@+id/imageView7" />

                    <ImageView
                        android:layout_width="69dp"
                        android:layout_height="69dp"
                        android:src="@drawable/yuck"
                        android:id="@+id/imageView8" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <RadioButton
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout3"
                android:layout_marginBottom="26dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/note"
                    android:textColor="@color/colorTextPrimary"
                    android:id="@+id/textView13" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="@string/date_of_note"
                    android:ems="10"
                    android:id="@+id/food_sample_nate_date"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/food_note_hint"
                    android:id="@+id/food_sample_note" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout4"
                android:layout_marginBottom="26dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/food_status"
                    android:textColor="@color/colorTextPrimary"
                    android:id="@+id/textView11" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_status_hint"
                    android:id="@+id/textView12"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="69dp"
                        android:layout_height="69dp"
                        android:src="@drawable/good"
                        android:id="@+id/imageView9" />

                    <ImageView
                        android:layout_width="69dp"
                        android:layout_height="69dp"
                        android:src="@drawable/pending"
                        android:id="@+id/imageView10" />

                    <ImageView
                        android:layout_width="69dp"
                        android:layout_height="69dp"
                        android:src="@drawable/block"
                        android:id="@+id/imageView11" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <RadioButton
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/food_sample_save_btn"
                android:layout_below="@+id/linearLayout4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
