<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/icon"
                android:id="@+id/nav_user_img"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/nav_user_img"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#BF0097A7"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#BF0097A7"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <!-- Login Button -->

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:text="@string/login"
                    android:textColor="#fff" />

                <!-- Link to Login Screen -->

                <Button
                    android:id="@+id/btnLinkToRegisterScreen"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/temp_img"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
