<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amal.mybabyhealthcare.NewBabyActivit"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="true"
                android:id="@+id/relativeLayout2"
                android:background="@color/colorPrimary">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/new_cover"
                    android:scaleType="centerCrop"
                    android:id="@+id/imageView14" />

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:id="@+id/new_baby_img"
                    android:src="@drawable/baby_placeholder"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:layout_above="@+id/add_new_baby_pic_btn"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pic"
                    android:id="@+id/add_new_baby_pic_btn"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:layout_alignParentLeft="false"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/save_new_baby_btn"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/new_baby_cancle"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginTop="16dp"
                android:background="#fff"
                android:padding="20dp"
                android:layout_marginBottom="16dp">

                <EditText
                    android:theme="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/new_baby_name_btn"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:hint="First name"
                    android:textColorHint="@color/colorTextSecondary"
                    android:textColor="@color/colorTextPrimary" />

                <EditText
                    android:theme="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/new_baby_last_name_btn"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:hint="Last name"
                    android:textColorHint="@color/colorTextSecondary"
                    android:textColor="@color/colorTextPrimary" />

                <EditText
                    android:theme="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:ems="10"
                    android:id="@+id/new_baby_birth_btn"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/birth_date"
                    android:textColorHint="@color/colorTextSecondary"
                    android:textColor="@color/colorTextPrimary" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/gender"
                        android:id="@+id/textView8"
                        android:textSize="15dp"
                        android:textColor="@color/colorTextSecondary"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:theme="@style/AppTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:id="@+id/add_baby_male_rad"
                            android:checked="true"
                            android:textSize="15dp"
                            android:textColor="@color/colorTextSecondary" />

                        <RadioButton
                            android:theme="@style/AppTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:id="@+id/add_baby_female_rad"
                            android:layout_marginBottom="5dp"
                            android:checked="false"
                            android:textSize="15dp"
                            android:textColor="@color/colorTextSecondary" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
